<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.MainActivity">

    <LinearLayout
            android:id="@+id/main"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="24sp" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/current_user"
                android:textSize="18sp" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.05" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currentUser"
                android:text="@string/none"
                android:textSize="18sp" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:maxWidth="400dp"
                android:inputType="textPassword"
                android:hint="@string/wakatime_api_key"
                android:id="@+id/wakaTimeApiKeyInput"
                android:textColorHint="#546E7A"
                android:minHeight="48dp" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        <Button
                android:text="@string/save"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/saveBtn" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

    </LinearLayout>
</ScrollView>